--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,9 +1,7 @@
-// html, body {
-//     min-height: 100vh;
-// }
-
 #app, .theme-container {
     height: 100vh;
+    font-size: 14px;
+    line-height: 16px;
 }
 
 div.footer {
@@ -19,4 +17,11 @@ div.footer {
 
 div.theme-default-content:not(.custom) {
     max-width: 100vw - 30rem;
+}
+
+span.prev {
+    margin-right: 10px;  
+}
+span.next {
+    margin-left: 10px;
 }
