--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -1,24 +1,22 @@
-main {
-    min-height: 100vh - 1.4rem - 3.6rem;
+// html, body {
+//     min-height: 100vh;
+// }
+
+#app, .theme-container {
+    height: 100vh;
+}
+
+div.footer {
+    padding: 1.5rem !important;
+}
+
+.home {
+    height: calc(100% - 3.6rem);
     flex-direction: column !important;
     display: flex !important;
     padding-bottom: 0 !important;
 }
 
-.footer {
-    font-size: 12px;
-    padding: 1.5rem !important;
-    margin-top: auto !important;
-    bottom: 0;
-}
-
 div.theme-default-content:not(.custom) {
     max-width: 100vw - 30rem;
-}
-
-span.prev {
-    margin-right: 10px;  
-}
-span.next {
-    margin-left: 10px;
 }
