--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -3,6 +3,8 @@ main {
     flex-direction: column !important;
     display: flex !important;
     padding-bottom: 0 !important;
+    font-size: 14px;
+    line-height: 16px;
 }
 
 .footer {
